# raylib-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  debug.sh  release.sh
src/: game.cc  game.hh  proj.cc
src/engine/: global.hh  rmanager.cc  rmanager.hh  textures.hh
src/engine/camera/: camera.cc  camera.hh
src/engine/enums/: fonts.hh  scenes.hh  textures.hh
src/engine/resman/: resman.cc  resman.hh
src/engine/scenes/: init.hh  scene.hh  scenman.cc  scenman.hh
src/engine/text/: textbox.cc  textbox.hh  typewriter.cc  typewriter.hh
src/engine/triggers/: mtrigger.hh
